@@ -3,6 +3,13 @@ package SPVM::CORE {
   use SPVM::Complex_2d;
   use SPVM::List;
   use SPVM::Hash;
+
+  native sub reverseb : void ($nums : byte[]);
+  native sub reverses : void ($nums : short[]);
+  native sub reversei : void ($nums : int[]);
+  native sub reversel : void ($nums : long[]);
+  native sub reversef : void ($nums : float[]);
+  native sub reversed : void ($nums : double[]);
   
   native sub sortb : void ($nums : byte[]);
   native sub sorts : void ($nums : short[]);
