@@ -1,6 +1,71 @@
 package TestCase::CoreFunc::Basic {
   use TestCase::Minimal;
 
+  sub test_reverseb : int () {
+    {
+      my $nums = [(byte)1, 3, INT8_MAX()];
+      reverseb($nums);
+      unless (equals_barray($nums, [(byte)INT8_MAX(), 3, 1])) {
+        return 0;
+      }
+    }
+
+    return 1;
+  }
+  sub test_reverses : int () {
+    {
+      my $nums = [(short)1, 3, INT16_MAX()];
+      reverses($nums);
+      unless (equals_sarray($nums, [(short)INT16_MAX(), 3, 1])) {
+        return 0;
+      }
+    }
+
+    return 1;
+  }
+  sub test_reversei : int () {
+    {
+      my $nums = [(int)1, 3, INT32_MAX()];
+      reversei($nums);
+      unless (equals_iarray($nums, [(int)INT32_MAX(), 3, 1])) {
+        return 0;
+      }
+    }
+    return 1;
+  }
+  sub test_reversel : int () {
+    {
+      my $nums = [(long)1, 3, INT64_MAX()];
+      reversel($nums);
+      unless (equals_larray($nums, [(long)INT64_MAX(), 3, 1])) {
+        return 0;
+      }
+    }
+    
+    return 1;
+  }
+  sub test_reversef : int () {
+    {
+      my $nums = [(float)1, 3, FLT_MAX()];
+      reversef($nums);
+      unless (equals_farray($nums, [(float)FLT_MAX(), 3, 1])) {
+        return 0;
+      }
+    }
+    
+    return 1;
+  }
+  sub test_reversed : int () {
+    {
+      my $nums = [(double)1, 3, DBL_MAX()];
+      reversed($nums);
+      unless (equals_darray($nums, [(double)DBL_MAX(), 3, 1])) {
+        return 0;
+      }
+    }
+    return 1;
+  }
+
   sub test_sortb : int () {
     {
       my $nums = [(byte)5, -7, 9, INT8_MIN(), 127, 15, 19];
