@@ -14,6 +14,12 @@
   - add sortl core function
   - add sortf core function
   - add sortd core function
+  - add reverseb core function
+  - add reverses core function
+  - add reversei core function
+  - add reversel core function
+  - add reversef core function
+  - add reversed core function
 0.0410 2018-01-16
   - Fix realese of 0.0409
 0.0409 2018-01-16
